# wolf_prowler

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.new  Direction.md  DocPlan.md  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  MAINTAINER_GUIDELINES.md  Makefile  MonitoringEnvirnonment.yml  PRIVACY.md  README.md  THIRD-PARTY-NOTICE.txt  about.toml  admin_password.secret  api_key.secret  build.sh  cargo_check_final.txt  cargo_check_final_final.txt  cargo_check_wolf_server.txt  cargo_check_wolf_web.txt  cargo_check_workspace.txt  cargo_test_wolf_server.txt  check_error_output  clippy_new.txt  clippy_output.txt  clippy_output_2.txt  clippy_output_3.txt  clippy_output_4.txt  clippy_summary.txt  clippy_verify.txt  clippy_wolf_net.txt  dashboard_secret_key.secret  (+11 more)
crates/WolfDb/: .gitignore  Cargo.toml  README.md  dashboard.html  test_api.rs
crates/WolfDb/benches/: criterion_config.rs  crypto_bench.rs  storage_bench.rs
crates/WolfDb/docs/: revolution_plan.md
crates/WolfDb/src/: error.rs  lib.rs  main.rs
crates/WolfDb/tests/: holistic_integration.rs  hybrid_search.rs  large_scale_vector.rs  selective_indexing.rs  stress.rs
crates/lock_prowler/lock_prowler/: Cargo.toml  README.md
crates/lock_prowler/lock_prowler_dashboard/: Cargo.toml  README.md
crates/tercespot/airgap/: Cargo.toml
crates/tercespot/ceremony/: Cargo.toml
crates/wolf_log/: Cargo.toml
crates/wolf_log/src/: lib.rs
patches/arrow-arith/: Cargo.toml
patches/arrow-arith/src/: temporal.rs
wolf-integrations/wolf_control/: Cargo.toml  README.md  features.toml
wolf-integrations/wolf_control/src/: main.rs  main_fixed.rs
wolf-integrations/wolf_den/: Cargo.toml  features.toml
wolf-integrations/wolf_fuzz/: Cargo.toml  README.md
wolf-integrations/wolf_server/: Cargo.toml  features.toml
wolf-networking/wolf_net/: Cargo.toml  TODO.md
wolf-networking/wolf_web/: Cargo.toml
wolf-platform/: AGENTS.md  Cargo.toml  LICENSE-MIT  config.toml  settings.toml
wolf-platform/scripts/: backup_repo.sh  cleanup_phase1.sh  cleanup_phase2.sh  docker-manager.bat  migrate_to_domains.sh  purge_secrets.sh  run_fuzzers.sh  run_migrations.sh  scan_secrets.sh  simulate_wolf_pack.sh  split_repository.sh
wolf-platform/src/: compliance_service.rs  crypto.rs  error.rs  lib.rs.backup  network_extensions.rs  simple_validation.rs  threat_feeds.rs  validated_json.rs  validation.rs
wolf-security/wolfsec/: Cargo.toml  README.md  features.toml
wolf-security/wolfsec-core/: Cargo.toml
wolf-security/wolfsec-network/: Cargo.toml
wolf-security/wolfsec-siem/: Cargo.toml
wolf-security/wolfsec-threat-detection/: Cargo.toml
wolf_control/: Cargo.toml
wolf_control/src/: config.rs  lib.rs  main.rs
wolf_control/tests/: config_integration.rs
wolf_fuzz/: Cargo.toml
wolf_fuzz/src/: fuzz_crypto.rs  fuzz_net.rs  fuzz_security.rs
wolf_net/: Cargo.toml  IMPLEMENTATION_PLAN.md  LIBP2P_UPGRADE.md  README.md  features.toml  managers.md
wolf_net/src/: api.rs  behavior.rs  config.rs  discovery.rs  encrypted_handler.rs  encryption.rs  event.rs  firewall.rs  geo.rs  handshake.rs  hub_orchestration.rs  lib.rs  logic.rs  message.rs  metrics_simple.rs  mod.rs  p2p.rs  peer.rs  protocol.rs  reporting_service.rs  reputation.rs  scanner.rs  security.rs  swarm.rs  swarm_manager.rs  utils.rs  wolf_node.rs
wolf_net/tests/: api_methods_test.rs  discovery_integration.rs  election_integration.rs  encryption_integration.rs  hunt_simulation.rs  peer_tracking_integration.rs  phase1_hunt_coordinator_tests.rs  phase2_hunt_lifecycle_tests.rs  phase3_howl_protocol_tests.rs
wolf_server/: API_DOCUMENTATION.md  Cargo.toml  DATABASE_INTEGRATION.md  README.md  THREAT_INTELLIGENCE.md
wolf_server/src/: api.rs  api_handlers.rs  api_middleware.rs  main.rs  persistence.rs  threat_api.rs  wolfsec_integration.rs
wolf_server/tests/: e2e_full_stack.rs
wolf_web/: Cargo.toml  README.md  features.toml
wolf_web/assets/: index.html
wolf_web/src/: dashboard_components.rs  globals.rs  lib.rs  main.rs  types.rs  ui_kit.rs  vault_components.rs
wolf_web/static/: auth.html  auth_enhanced.html  cloud_security.html  compliance.html  consensus.html  crypto_advanced.html  crypto_advanced_v2.html  dashboard_modern.html  firewall.html  howl.html  hub_organizations.html  index.html  login.html  logs.html  lunar_calendar.html  monitoring.html  navigation_hub.html  network-scanner.html  network.html  network_map.html  neural_center.html  omega_control.html  p2p.html  packs.html  scent_trails.html  security.html  security_dashboard.html  security_policy.html  settings.html  siem_dashboard.html  soar_dashboard.html  territory_marking.html  threat_detection.html  timezone_settings.html  under_development.html  wolf_den.html  wolf_howl.html
wolf_web/tests/: dashboard_integration.rs
wolfsec/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  WOLFSEC_ROADMAP.md
wolfsec-core/: Cargo.toml
wolfsec-network/: Cargo.toml
wolfsec-network/src/: lib.rs
wolfsec-siem/: Cargo.toml
wolfsec-siem/src/: lib.rs
wolfsec-threat-detection/: Cargo.toml
wolfsec/benches/: crypto_bench.rs  metrics_bench.rs
wolfsec/docs/: CONFIGURATION.md  PERFORMANCE.md
wolfsec/examples/: authentication_demo.rs  basic_security_setup.rs  basic_usage.rs  metrics_collection.rs  threat_detection_demo.rs
wolfsec/src/: README.md  alerts.rs  audit.rs  authentication.rs  comprehensive_tests.rs  configuration_monitor.rs  crypto.rs  dashboard.rs  features.toml  identity.rs  key_management.rs  lib.rs  metrics.rs  ml.rs  mod.rs  monitoring.rs  network_security.rs  reporting.rs  reputation.rs  sbom_validation.rs  store.rs  threat_detection.rs  wolf_ecosystem_integration.rs
wolfsec/tests/: crypto_tests.rs  crypto_tests_final.rs  crypto_tests_fixed.rs  crypto_tests_simple.rs  crypto_tests_working.rs  crypto_unit_tests.rs  external_feeds.rs  firewall_integration_tests.rs  notification_tests.rs  performance_tests.rs  pipeline_tests.rs  security_integration.rs  siem_pipeline_tests.rs  unit_tests.rs  wolf_db_integration_tests.rs
(+1056 files in other folders)
