[workspace]
resolver = "2"
members = [
    # Platform (main application)
    "wolf-platform",
    
    # Security domain
    "wolf-security/wolfsec",
    "wolf-security/wolfsec-core",
    "wolf-security/wolfsec-network",
    "wolf-security/wolfsec-siem",
    "wolf-security/wolfsec-threat-detection",
    "wolf-security/crates/lock_prowler/lock_prowler",
    "wolf-security/crates/lock_prowler/lock_prowler_dashboard",
    "wolf-security/crates/tercespot/client",
    "wolf-security/crates/tercespot/daemon",
    "wolf-security/crates/tercespot/shared",
    "wolf-security/crates/tercespot/ceremony",
    "wolf-security/crates/tercespot/airgap",
    "wolf-security/crates/tercespot/privacy",
    
    # Storage domain
    "wolf-storage/crates/WolfDb",
    
    # Networking domain
    "wolf-networking/wolf_net",
    "wolf-networking/wolf_web",
    
    # Integrations domain
    "wolf-integrations/wolf_control",
    "wolf-integrations/wolf_server",
    "wolf-integrations/wolf_fuzz",
    "wolf-integrations/wolf_den",
    
    # Observability domain
    "wolf-observability/crates/wolf_log",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wolf Prowler Team"]
license = "MIT"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.dependencies]
# Core async runtime - unified to 1.35
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Cryptography
ring = { version = "0.17" }
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"

# P2P Networking
libp2p = { version = "0.53", features = ["serde"] }

# Web framework
axum = { version = "0.7.7" }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async traits (transitioning to native async traits in Rust 1.75+)
async-trait = "0.1"

# Testing
tokio-test = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
