[package]
name = "wolf_control"
version = "0.1.0"
edition = "2021"
description = "TUI Controller for Wolf Prowler V2 Nodes"
license = "MIT"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["tui", "terminal", "monitoring", "ratatui"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

# Integration with Wolf Ecosystem (for reusing types/protocols if needed)
wolf_net = { path = "../wolf_net" }
wolfsec = { path = "../wolfsec" }
wolf_den = { path = "../wolf_den" }

libp2p = { version = "=0.53.0", default-features = false, features = ["serde"] }

toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
rand = "0.8"
thiserror = "1.0"

[lints]
workspace = true
