[package]
name = "wolf_fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libafl = "0.11"
libafl_bolts = "0.11"
libafl_targets = "0.11"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
rand = "0.8"
# Workspace dependencies
wolfsec = { path = "../wolfsec" }
wolf_net = { path = "../wolf_net" }
wolf_den = { path = "../wolf_den" }

[[bin]]
name = "fuzz_crypto"
path = "src/fuzz_crypto.rs"

[[bin]]
name = "fuzz_net"
path = "src/fuzz_net.rs"

[[bin]]
name = "fuzz_security"
path = "src/fuzz_security.rs"
