[package]
name = "wolf_net"
version = "0.1.0"
edition = "2021"
description = "P2P networking library with QUIC/HyperPulse transport, Raft consensus, and encrypted mesh networking"
license = "MIT OR Apache-2.0"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["p2p", "networking", "libp2p", "quic", "raft"]
categories = ["network-programming"]
rust-version = "1.70"

[lib]
name = "wolf_net"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Basic utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
ring = "0.16"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
zeroize = "1.5"

# P2P Networking
libp2p = { version = "=0.53.0", default-features = false, features = ["ping", "identify", "request-response", "gossipsub", "mdns", "kad", "tcp", "noise", "yamux", "tokio", "macros", "serde", "dns", "quic"] }
ping = "0.7.0"
dns-lookup = "2.0"

# HTTP client for GeoIP
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
void = "1.0"

# Distributed Consensus
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
sled = "0.34"          # Persistent embedded database
bincode = "1.3"        # Binary serialization
prost = "0.11"         # Protobuf for Raft messages
slog = "2.7"           # Logging for Raft
slog-term = "2.9"      # Terminal decorator for slog
slog-async = "2.7"     # Async drain for slog

# Internal dependencies
wolf_den = { path = "../wolf_den" }
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.8"
