[package]
name = "wolf_server"
version = "0.1.0"
edition = "2021"
description = "Production server for Wolf Prowler V2 network nodes"
license = "MIT OR Apache-2.0"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["server", "http", "websocket", "security"]
categories = ["web-programming::http-server"]
rust-version = "1.70"

[features]
# Default features - database persistence enabled by default
default = ["database"]

# Database persistence feature
database = []

[dependencies]
# Core Runtime
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wolf Prowler Ecosystem
wolf_den = { path = "../wolf_den" }
wolf_net = { path = "../wolf_net" }
wolfsec = { path = "../wolfsec" }
wolf_prowler = { path = ".." }

# Networking (Pinned to match workspace)
libp2p = { version = "=0.53.0", default-features = false, features = [
    "noise",
    "tcp",
    "yamux",
    "identify",
    "request-response",
    "gossipsub",
    "serde",
    "mdns",
    "kad"
] }
axum = "0.7.7"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
chrono = "0.4"

# TEMPORARILY DISABLED - Migrating to WolfDb
# sqlx = { version = "0.7", features = [
#     "runtime-tokio-rustls",
#     "postgres",
#     "chrono",
#     "uuid",
#     "json",
#     "bigdecimal",
# ] }
# TODO: Remove PostgreSQL dependencies after WolfDb migration complete
ipnetwork = "0.20"
uuid = { version = "1.0", features = ["v4", "serde"] }
