[package]
name = "wolf_web"
version = "0.1.0"
edition = "2021"
description = "Dioxus-based Web Dashboard for Wolf Prowler Security Platform"
license = "MIT OR Apache-2.0"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["web", "dashboard", "security", "dioxus"]
categories = ["web-programming"]
rust-version = "1.70"

[features]
default = ["server"]
server = []

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
dioxus-fullstack = { version = "0.6", features = ["axum", "server"] }
dioxus-logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.7", features = ["ws", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs", "timeout"] }
askama = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
once_cell = "1.19"
thiserror = "1.0"

# Wolf Dependencies
wolfsec = { path = "../wolfsec" }
wolf_net = { path = "../wolf_net" }
wolf_den = { path = "../wolf_den" }
lock_prowler = { path = "../crates/lock_prowler/lock_prowler" } # Use the crate path we moved
wolf_db = { path = "../crates/WolfDb" }
tracing = "0.1.44" 
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = ["Window", "Document"] }
[lints]
workspace = true
