[package]
name = "wolfsec-core"
version = "0.1.0"
edition = "2021"
description = "Core Wolf Security orchestrator and types"
license = "MIT"
authors = ["Wolf Prowler Team <team@wolfprowler.dev>"]
repository = "https://github.com/wolfprowler/wolfsec"
keywords = ["security", "orchestrator", "framework"]
categories = ["security", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["sync"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"