[package]
name = "wolfsec-siem"
version = "0.1.0"
edition = "2021"
description = "Security Information and Event Management for WolfSec"
license = "MIT"
authors = ["Wolf Prowler Team <team@wolfprowler.dev>"]
repository = "https://github.com/wolfprowler/wolfsec"
keywords = ["security", "siem", "monitoring", "events"]
categories = ["security", "api-bindings"]

[dependencies]
wolfsec-core = { path = "../wolfsec-core" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }