[package]
name = "wolfsec"
version = "0.1.0"
edition = "2021"
authors = ["Wolf Prowler Team"]
description = "Consolidated security module for Wolf Prowler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wolfprowler/wolfprowler"
keywords = ["security", "cryptography", "authentication", "monitoring", "siem"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core dependencies
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "=0.53.0", default-features = false, features = ["serde"] }
async-trait = "0.1"
num-traits = "0.2"
wolf_den = { path = "../wolf_den" }
wolf_net = { path = "../wolf_net" }
regex = "1.9"
md5 = "0.7"
thiserror = "1.0"
fips203 = "0.4.3"
fips204 = "0.4.6"
rand_chacha = "0.3"

# Cryptographic dependencies
sha2 = "0.10"
blake3 = "1.4"
hmac = "0.12"
pbkdf2 = "0.12"
argon2 = "0.5"
getrandom = "0.2"
ed25519-dalek = { version = "2.0", optional = true }
x25519-dalek = "2.0"
aes-gcm-siv = { version = "0.11", optional = true }
ring = "0.16"
rand = "0.8"
rcgen = "0.11"
openssl = "0.10"
jsonwebtoken = "9.2"
# Optional advanced features
zeroize = { version = "1.6", optional = true }
base64 = "0.21"
openidconnect = { version = "4.0", features = ["reqwest"] }
sha1 = "0.10"
data-encoding = "2.5"
qrcode = "0.12"

# Python CLI bindings
clap = { version = "4.0", features = ["derive"], optional = true }

# HTTP client for notifications
reqwest = { version = "0.11", features = ["json", "blocking"] }
http = "0.2"

# PDF generation
printpdf = "0.3"
# TersecPot Shared Library
tersec_shared = { path = "../crates/tercespot/shared", package = "shared" }

# Email notifications
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls", "builder"] }

# Machine Learning dependencies
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"], optional = true }  # ONNX Runtime
linfa = { version = "0.7", optional = true }  # Classical ML algorithms
linfa-clustering = { version = "0.7", optional = true }
ndarray = "0.15"  # Tensor operations (required for data structures)
# TEMPORARILY DISABLED - Migrating to WolfDb
wolf_db = { path = "../crates/WolfDb" }
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
# TODO: Remove PostgreSQL dependencies after WolfDb migration complete
bollard = { version = "0.15", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = "3.8"

[features]
default = [
    "crypto",
    "network-security",
    "threat-detection",
    "authentication",
    "key-management",
    "monitoring",
    "advanced-crypto",
    "container_security",
]
container_security = ["bollard"]
crypto = []
network-security = []
threat-detection = []
authentication = []
key-management = []
monitoring = []

# Advanced cryptographic features
advanced-crypto = ["ed25519-dalek", "aes-gcm-siv", "zeroize"]
full-crypto = ["advanced-crypto"]

# Development features
dev-testing = []

# Python CLI feature
python-cli = ["aes-gcm-siv", "clap"]

# Machine Learning features
ml-onnx = ["ort"]
ml-classical = ["linfa", "linfa-clustering"]
ml-full = ["ml-onnx", "ml-classical"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"


# Python CLI binary
[[bin]]
name = "wolfsec-python"
path = "src/python_cli.rs"
required-features = ["python-cli"]
