[package]
name = "wolf_db"
version = "0.1.0"
edition = "2021"
description = "Post-Quantum Cryptographic Database with ML-L2 Vector Search and Dilithium Signatures"
license = "MIT OR Apache-2.0"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["database", "cryptography", "post-quantum", "ml", "vector-search"]
categories = ["database", "cryptography"]
rust-version = "1.70"

[dependencies]
sled = "0.34"
pqc_kyber = "0.7"
fips204 = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hnsw_rs = "0.3"
nalgebra = "0.33"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
comfy-table = "7.1"
dialoguer = "0.11"
colored = "2.1"
shlex = "1.3"
argon2 = "0.5"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
tokio = { version = "1.0", features = ["full"] }
cryptoki = "0.6"
secrecy = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4"

# Web server
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "timeout"] }

# Authentication & sessions
jsonwebtoken = "9.2"

# WebSocket
tokio-tungstenite = "0.21"

# Additional utilities
serde_qs = "0.12"
mime = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false
[lints]
workspace = true
