[package]
name = "wolf_log"
version = "0.1.0"
edition = "2021"
description = "Unified logging infrastructure for Wolf Prowler"
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
