[package]
name = "wolf_control"
version = "0.1.0"
edition = "2021"
description = "TUI Controller for Wolf Prowler V2 Nodes"
license = "MIT"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["tui", "terminal", "monitoring", "ratatui"]
categories = ["command-line-utilities"]
rust-version = "1.70"

[lib]
name = "wolf_control"
path = "src/lib.rs"

[[bin]]
name = "wolf_control"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

# Integration with Wolf Ecosystem (for reusing types/protocols if needed)
wolf_net = { path = "../../wolf-networking/wolf_net" }
wolfsec = { path = "../../wolf-security/wolfsec" }
wolf_den = { path = "../../wolf-integrations/wolf_den" }

libp2p = { version = "=0.53.0", default-features = false, features = ["serde"] }

toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
