[package]
name = "wolf_server"
version = "0.1.0"
edition = "2021"
description = "Production server for Wolf Prowler V2 network nodes"
license = "MIT"
authors = ["Terrence A. Jones <tariqselassie@gmail.com>"]
repository = "https://github.com/tariqselassie-hub/wolf_prowler"
keywords = ["server", "http", "websocket", "security"]
categories = ["web-programming::http-server"]
rust-version = "1.70"

[features]
# Default features - database persistence enabled by default
default = ["database"]

# Database persistence feature
database = []

[dependencies]
# Core Runtime
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Wolf Prowler Ecosystem
wolf_den = { path = "../../wolf-integrations/wolf_den" }
wolf_net = { path = "../../wolf-networking/wolf_net" }
wolfsec = { path = "../../wolf-security/wolfsec" }
wolf_db = { path = "../../wolf-storage/crates/WolfDb" }
wolf_prowler = { path = "../../wolf-platform" }

# Networking (Pinned to match workspace)
libp2p = { version = "=0.53.0", default-features = false, features = [
    "noise",
    "tcp",
    "yamux",
    "identify",
    "request-response",
    "gossipsub",
    "serde",
    "mdns",
    "kad"
] }
axum = "0.7.7"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
chrono = { workspace = true }

# TEMPORARILY DISABLED - Migrating to WolfDb

ipnetwork = "0.20"
uuid = { workspace = true }
[lints]
workspace = true
